[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/bosses/rouge_boss.png" type="Texture" id=1]
[ext_resource path="res://physics/Rocket.tscn" type="PackedScene" id=2]
[ext_resource path="res://enemies/bosses/Rouge.gd" type="Script" id=3]
[ext_resource path="res://physics/HitEffect.tscn" type="PackedScene" id=4]

[node name="Rouge" type="Area2D" groups=["enemies"]]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.8, 1.8 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 2, 18, 11, 16, 18, 14, 18, -7, 14, -11, -14, -11, -18, -7, -18, 14, -11, 16, -2, 18 )

[node name="Rocket" parent="." instance=ExtResource( 2 )]
position = Vector2( 6, -11 )
rotation = 3.14159

[node name="Rocket2" parent="." instance=ExtResource( 2 )]
position = Vector2( -6, -11 )
rotation = 3.14159

[node name="HitEffect" parent="." instance=ExtResource( 4 )]

[node name="Gun1" type="Position2D" parent="."]
position = Vector2( 10, 16 )

[node name="Gun2" type="Position2D" parent="."]
position = Vector2( -10, 16 )

[node name="Gun3" type="Position2D" parent="."]
position = Vector2( 0, 18 )
